--- a/index.html
+++ b/index.html
@@ -401,7 +401,13 @@
                 });
             })
         })();
-
+        
+        /* gesture */
+        (function() {
+            utils.setPinchGesture(document, function(res) {
+                console.log(res)
+            });
+        })();
     </script>
 </body>
 
