--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         var obj1 = { id: 1, key: 2, attr: { width: 5, height: 10 }, array: [1, 2, 3, 4, 5]};
         var arr1 = [1, 2, 3, 4, 5];
         var arr2 = ["A","B","C","D","E"];
+        var hex1 = "fc5ec768ab8a13acb11a480021b842fb";
+        var hex2 = "469503e2df0f6e8acdeb95154972044e";
+        var hex3 = "3e0dbcaf6baf7c1c84727c7f23f268a1";
+        var hex4 = "b49ce4a5069c42b08670ebaf548db772";
+        var hex5 = "640486cc0febb8122dfece7f21620d7f";
         var img;
 
         /* loadImage */
@@ -414,6 +419,11 @@
             utils.setPinchGesture(document, function(res) {
                 console.log(res)
             });
+        })();
+
+        /* test */
+        (function() {
+
         })();
     </script>
 </body>
