--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
 <body>
     <!-- html -->
-    <h3>List</h3>
+    <h3>Method list</h3>
     <div id="list-container"></div>
 
-    <h3>MyAnimation, MyCanvas, MyRectangle</h3>
+    <h3>MyCanvas, MyRectangle</h3>
     <div id="canv-container"></div>
+
+    <h3>MyAnimation</h3>
     <span id="count-animation">0</span>
     <button id="start-animation">Start</button>
     <button id="stop-animation">Pause</button>
@@ -28,9 +30,9 @@
     <h3>MyCanvas.slice</h3>
     <div id="canv-container-2"></div>
 
-    <h3>setGrayscaleFilter, setSobelFilter</h3>
-    <div id="canv-container-3"></div>
     <input id="upload-3" type="file" accept="image/*">
+    <h3>original, setSobelFilter</h3>
+    <div id="canv-container-3"></div>
 
     <!-- js -->
     <script src="dist/index.js"></script>
@@ -41,7 +43,7 @@
             var list = Object.keys(utils);
             var html = "\<ol\>";
             list.forEach(function(e, idx) {
-                html += "\<li\>" + e + "()\<\/li\>";
+                html += "\<li\>" + e + "("+ utils.getArgumentNames(utils[e]).join(", ") +")\<\/li\>";
             });
             html += "\<\/ol\>";
             container.innerHTML += html;
@@ -375,16 +377,14 @@
             document.getElementById("canv-container-2").appendChild(canv2);
         })();
 
-        /* grayscalem sibel */
+        /* grayscalem sobel */
         (function() {
             var CANVAS_WIDTH = 262;
             var CANVAS_HEIGHT = 262;
             var canv1 = new utils.MyCanvas(CANVAS_WIDTH, CANVAS_HEIGHT);
             var canv2 = new utils.MyCanvas(CANVAS_WIDTH, CANVAS_HEIGHT);
-            var canv3 = new utils.MyCanvas(CANVAS_WIDTH, CANVAS_HEIGHT);
             document.getElementById("canv-container-3").appendChild(canv1.getCanvas());
             document.getElementById("canv-container-3").appendChild(canv2.getCanvas());
-            document.getElementById("canv-container-3").appendChild(canv3.getCanvas());
 
             document.getElementById("upload-3").addEventListener("change", function(e) {
                 if (e.target.files.length < 0) {
@@ -397,17 +397,12 @@
                     }
                     canv1.setCanvas(res.width, res.height);
                     canv2.setCanvas(res.width, res.height);
-                    canv3.setCanvas(res.width, res.height);
                     canv1.fit("contain", CANVAS_WIDTH, CANVAS_HEIGHT);
                     canv2.fit("contain", CANVAS_WIDTH, CANVAS_HEIGHT);
-                    canv3.fit("contain", CANVAS_WIDTH, CANVAS_HEIGHT);
                     canv1.drawImage(0,0,canv1.width,canv1.height,res);
                     var imageData = canv1.getImageData();
                     var newImageData = utils.setSobelFilter(imageData);
                     canv2.putImageData(0, 0, newImageData);
-
-                    var newNewImageData = utils.setMonochromeFilter(newImageData);
-                    canv3.putImageData(0, 0, newNewImageData);
 
                     console.log("utils.setSobelFilter", newImageData);
                 });
@@ -416,7 +411,6 @@
         
         /* test */
         (function() {
-
         })();
     </script>
 </body>
