--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- html -->
-    <h3>Method list</h3>
+    <h3>List of methods</h3>
     <div id="list-container"></div>
 
     <h3>MyCanvas, MyRectangle</h3>
