--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
         
         /* test */
         (function() {
-            var arr = ["1", "a"];
-            console.log(utils.getTypes(arr));
+            var arr = NaN;
+            console.log(utils.checkType(arr, "NaN"));
         })();
     </script>
 </body>
