--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             var arr = ["!@","A","C","B","1D", "E", "a-6", "a 7", "한글", "a", "1", "#5", "2", 36,"35", 34, "a-3", "a 45", "a 23", 1, undefined, null];
             console.log(
                 "utils.compare",
-                arr.sort(utils.compare)
+                [null, "a2", 1, undefined, "a11", "2", "a1"].sort(utils.compare)
             )
         })();
         
