--- a/index.html
+++ b/index.html
@@ -367,17 +367,11 @@
                 array: [1,2,3]
             }
             var query = {
-                id: {
-                    $lt: 2
-                },
-                $and: [{
-                    name: "raccoon"
-                }, {
-                    name: {
-                        $in: ["raccoon", "abcd"]
+                array: {
+                    $not: {
+                        $eq: [1,2,3]
                     }
-                }],
-                array: [1,2,3]
+                }
             }
 
             var res2 = utils.execQuery(obj, query);
