--- a/index.html
+++ b/index.html
@@ -402,6 +402,9 @@
                 },
                 array2: {
                     $exists: false // null or undefined
+                },
+                "size.weight": {
+                    $ne: 90
                 }
             }
 
