--- a/index.html
+++ b/index.html
@@ -435,9 +435,17 @@
                 1,
                 "1"
             ];
-
             console.log(
-                arr.sort(utils.compare)
+                arr.sort(utils.compare),
+            )
+            console.log(
+                utils.bubbleSort(arr, utils.compare),
+            )
+            console.log(
+                utils.insertionSort(arr, utils.compare),
+            )
+            console.log(
+                utils.mergeSort(arr, utils.compare),
             )
         })();
     </script>
