--- a/index.html
+++ b/index.html
@@ -425,11 +425,16 @@
                 true,
                 null,
                 false,
+                "개",
+                "Good",
                 "#not",
                 "12",
                 "!google",
+                "개굴",
+                "google",
                 "a-1",
                 "A",
+                "goob",
                 13,
                 "#",
                 1,
